project button link

--- a/style.css
+++ b/style.css
@@ -206,6 +206,12 @@ section {
   gap: 1rem;
 }
 
+/* .profile-photo {
+  border-radius: 50%;
+  height: 400px;
+  width: 400px;
+} */
+
 /* ICONS */
 
 .icon {
